--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/data-visualisation.fxml
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/data-visualisation.fxml
@@ -6,11 +6,11 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.moodtrackr.controllers.HelloController">
+      fx:controller="com.example.moodtrackr.controllers.DataVisualisationController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="Visualise Data" onAction="#onHelloButtonClick"/>
 </VBox>
