--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/mood-input.fxml
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/mood-input.fxml
@@ -5,17 +5,13 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.layout.HBox?>
-
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.moodtrackr.controller.HelloController">
+      fx:controller="com.example.moodtrackr.controller.MoodInputController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Button fx:id="MoodInputButton"
-            text="MoodInput"
-            onAction="#onMoodInputButtonClick"/>
+    <Label fx:id="welcomeText"/>
+    <Button text="New Session" onAction="#onAddSessionButtonClick"/>
+    <Button text="End Session" onAction="#onEndSession"/>
 </VBox>
