Changed page window size. Also updated mood input page.

--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/mood-input-page.fxml
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/mood-input-page.fxml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-
-
-<HBox spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.moodtrackr.controller.MoodInputPageController">
+<HBox spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.moodtrackr.controller.MoodInputPageController">
 
     <padding>
-        <Insets bottom="100.0" left="20" right="100.0" top="20.0"/>
+        <Insets bottom="100.0" left="20" right="100.0" top="20.0" />
     </padding>
 
 
-    <VBox alignment="TOP_CENTER">
-        <Label text="Moodtrackr"/>
-        <Button alignment="CENTER" text="Dashboard"
-                fx:id="DashboardButton"
-                onAction="#onDashboardButtonClick"/>
-        <Button alignment="CENTER" text="Mood"/>
-        <Button alignment="CENTER" text="Data"/>
-        <Button alignment="CENTER" text="Calendar"/>
-        <Button alignment="CENTER" text="Settings"/>
+    <VBox>
+        <Label text="Moodtrackr">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="100.0" />
+         </padding></Label>
+        <Button fx:id="DashboardButton" onAction="#onDashboardButtonClick" text="Dashboard" />
+        <Button text="Mood" />
+        <Button text="Data" />
+        <Button text="Calendar" />
+        <Button text="Settings">
+         <VBox.margin>
+            <Insets bottom="250.0" />
+         </VBox.margin></Button>
+      <Button mnemonicParsing="false" text="Logout" />
     </VBox>
 
 
-    <VBox alignment="TOP_CENTER" VBox.vgrow="ALWAYS" spacing="20.0">
+    <VBox alignment="TOP_CENTER" spacing="20.0" VBox.vgrow="ALWAYS">
         <HBox>
-            <Label alignment="TOP_LEFT" text="MOOD INPUT" />
+            <Label alignment="TOP_LEFT" text="MOOD INPUT">
+            <font>
+               <Font size="24.0" />
+            </font></Label>
         </HBox>
 
         <HBox>
-            <Button alignment="BOTTOM_LEFT" text="Add Session" onAction="#onAddSessionButtonClick"/>
-            <Label fx:id="welcomeText"/>
+            <Button alignment="BOTTOM_LEFT" onAction="#onAddSessionButtonClick" text="Add Session" />
+            <Label fx:id="welcomeText" />
         </HBox>
 
-        <ListView HBox.hgrow="ALWAYS"
-                  minWidth="500" minHeight="200" maxWidth="2000" maxHeight="500"/>
+        <ListView maxHeight="500" maxWidth="2000" minHeight="200.0" minWidth="800.0" HBox.hgrow="ALWAYS" />
 
         <HBox>
-            <Button alignment="BOTTOM_LEFT" text="End Session" onAction="#onEndSessionButtonClick"/>
+            <Button alignment="BOTTOM_LEFT" onAction="#onEndSessionButtonClick" text="End Session" />
         </HBox>
     </VBox>
 
