add register -> login page

--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/register-view.fxml
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/register-view.fxml
@@ -26,10 +26,14 @@
             <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         </GridPane>
     </VBox>
+    <CheckBox fx:id="agreeCheckBox"
+              text="I agree to the terms and conditions."
+              onAction="#onAgreeCheckBoxClick"
+    />
     <Label fx:id="welcomeText"/>
     <HBox spacing="15.0" alignment="CENTER">
-        <Button text="Cancel" onAction="#onCancel"/>
-        <Button fx:id="confirmBtn" text="Register" onAction="#onRegisterButtonClick" disable="true"/>
+        <Button text="Cancel" onAction="#onCancelButtonClick"/>
+        <Button fx:id="registerButton" text="Register" onAction="#onRegisterButtonClick" disable="true"/>
     </HBox>
     <HBox spacing="15.0" alignment="CENTER">
         <Label text="Already has an account?"/>
