--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/hello-view.fxml
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/hello-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.moodtrackr.controllers.DataVisualisationController">
+<HBox style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.moodtrackr.controllers.BaseUITemplate">
     <VBox prefHeight="666.0" prefWidth="156.0" style="-fx-background-color: #252322;">
         <Label alignment="CENTER" prefHeight="152.0" prefWidth="170.0" text="\@Moodtrackr" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
             <VBox.margin>
