--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/stylesheet.css
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/stylesheet.css
@@ -76,6 +76,29 @@ GridPane .button:hover {
     -fx-scale-z: 1.2;
 }
 
+/* Mood input page */
+#main-container {
+    -fx-background-color: -fx-base-light;
+}
+
+#start-session {
+    -fx-text-fill: white;
+    -fx-cursor: hand;
+}
+#start-session:hover {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+    -fx-scale-z: 1.1;
+}
+#end-session {
+    -fx-text-fill: white;
+}
+#end-session:hover {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+    -fx-scale-z: 1.1;
+}
+
 /* Set color of node with fx:id="confirmBtn" */
 /*
 #registerButton {
