minor error from last commit fixed

--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/stylesheet.css
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/stylesheet.css
@@ -52,6 +52,8 @@ GridPane .button:hover {
 /* Search Bar */
 #account-menu {
     -fx-background-color: -fx-base-dark;
+}
+#account-menu .label {
     -fx-text-fill: white;
 }
 
