--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/stylesheet.css
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/stylesheet.css
@@ -42,6 +42,9 @@ Button {
 GridPane .button:hover {
     -fx-background-color: #D3D3D3;
     -fx-text-fill: -fx-base-dark;
+    -fx-scale-x: 0.9;
+    -fx-scale-y: 0.9;
+    -fx-scale-z: 0.9;
 }
 #side {
     -fx-background-color: -fx-base-dark;
@@ -107,12 +110,14 @@ GridPane .button:hover {
     -fx-alignment: CENTER;
 }
 .table-view .column-header-background {
-    -fx-background-radius: 8px;
-}
-.table-view .column-header {
     -fx-background-color: -fx-base-dark;
 }
+.table-view .column-header {
+    -fx-background-color: transparent;
+    -fx-size: 40px;
+}
 .table-view .column-header .label {
-    -fx-text-fill: white;
+    -fx-text-fill: #fff;
     -fx-font-weight: bold;
+    -fx-font-family: Arial;
 }
