--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/line-chart.fxml
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/line-chart.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.chart.*?>
 
-<?import javafx.scene.chart.LineChart?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.moodtrackr.controllers.LineChartController">
-    <LineChart fx:id="lineChart" />
-</AnchorPane>
+<LineChart fx:id="lineChart" layoutX="5.0" layoutY="10.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.moodtrackr.controllers.LineChartController">
+    <xAxis>
+        <CategoryAxis side="BOTTOM" fx:id="xAxis" />
+    </xAxis>
+    <yAxis>
+        <NumberAxis fx:id="yAxis" side="LEFT" />
+    </yAxis>
+</LineChart>
