--- a/MoodTrackr/src/main/resources/com/example/moodtrackr/line-chart.fxml
+++ b/MoodTrackr/src/main/resources/com/example/moodtrackr/line-chart.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.*?>
+<?import javafx.scene.layout.*?>
 
-<LineChart fx:id="lineChart" layoutX="5.0" layoutY="10.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.moodtrackr.controllers.LineChartController">
-    <xAxis>
-        <CategoryAxis side="BOTTOM" fx:id="xAxis" />
-    </xAxis>
-    <yAxis>
-        <NumberAxis fx:id="yAxis" side="LEFT" />
-    </yAxis>
-</LineChart>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="com.example.moodtrackr.controllers.LineChartController">
+    <LineChart fx:id="lineChart" layoutX="14.0" layoutY="14.0" prefHeight="246.0" prefWidth="687.0">
+        <xAxis>
+            <CategoryAxis label="Date" fx:id="xAxis" />
+        </xAxis>
+        <yAxis>
+            <NumberAxis fx:id="yAxis" label="Recorded Mood" lowerBound="1" tickUnit="1" upperBound="7" />
+        </yAxis>
+    </LineChart>
+</AnchorPane>
